@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(configure.in)
 AC_CANONICAL_SYSTEM
-AM_INIT_AUTOMAKE(hocr, 0.7.0)
+AM_INIT_AUTOMAKE(hocr, 0.7.1)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
